# fastapi-base

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  alembic.ini  docker-compose.yaml  pyproject.toml
.cursor/rules/: fastapi-rules.mdc
app/: main.py
app/api/: README.md
app/api/v1/: api.py
app/api/v1/docs/: README.md  errors.md  health.md
app/api/v1/endpoints/: __init__.py  health.py
app/core/: README.md  __init__.py  config.py  logging.py
app/crud/: README.md
app/db/: README.md  base.py  session.py
app/schemas/: README.md
app/services/: README.md
scripts/: init_project.sh
tests/: README.md  conftest.py
