[project]
name = "fastapi-base"
version = "0.1.0"
description = "FastAPI 기반의 프로젝트 보일러플레이트"
authors = [
    {name = "ydh4481@gmail.com",email = "ydh4481@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>2.0)",
    "pydantic-settings (>=2.2.0,<3.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "uvicorn (>=0.27.0,<0.28.0)",
    "python-jose (>=3.3.0,<3.4.0)",
    "passlib (>=1.7.4,<1.8.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "loguru (>=0.7.2,<0.8.0)"
]

[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = "FastAPI 기반의 프로젝트 보일러플레이트"
authors = ["ydh4481@gmail.com"]
packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.0"
mypy = "^1.16.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
start-prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
